# mail-service

./: .gitignore  ARGOCD-INTEGRATION-SUMMARY.md  ARGOCD-SETUP.md  CREDENTIALS-SETUP.md  DEPLOYMENT.md  ENHANCED-LOGGING-SUMMARY.md  README-EMAIL-SERVER.md  README.md  SETUP.md  docker-compose.yml
argocd/: email-server-helm.yaml  email-server-production-no-monitoring.yaml  email-server-production.yaml  email-server-simple.yaml  mail-service-production.yaml  mail-service-staging.yaml  prometheus-production.yaml  repo-config.yaml
backend/: Dockerfile  README.md  pyproject.toml  requirements.txt
backend/app/: __init__.py  api.py  auth.py  config.py  logging_config.py  mail_service.py  main.py  models.py  validation.py
backend/tests/: __init__.py  test_config.py  test_health.py
backend/tests/unit/: test_logging.py  test_mail_service.py  test_validation.py
docs/: API_DOCUMENTATION.md  EMAIL-SERVER-API.md  EMAIL-SERVER-SETUP.md  EMAIL-SERVER-SUMMARY.md  EMAIL-SERVER-USAGE.md  LOGGING.md
frontend/: Dockerfile  nginx.conf  package-lock.json  package.json
k8s/: backend-deployment.yaml  backend-service.yaml  configmap.yaml  docker-registry-secret.yaml  email-policy.yaml  frontend-deployment.yaml  frontend-service.yaml  gmail-smtp-credentials.yaml  ingress.yaml  kube-mail-email-policy.yaml  kube-mail-smtp-server.yaml  namespace-production.yaml  namespace-staging.yaml  namespace.yaml  network-policy.yaml  postfix-deployment.yaml  postfix-network-policy.yaml  postfix-relay-deployment.yaml  postfix-relay-service.yaml  postfix-service.yaml  pvc.yaml  smtp-relay.yaml  (+2 more)
(+58 files in other folders)
